# XScreenSaverWin

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  HowToBuild.md  HowToBuild.txt  LICENSE.txt  README.md  README.txt  READMEJP.md  READMEJP.txt  ReadMe.txt  STATUS.txt  XScreenSaverWin.iss  XScreenSaverWin.url  clean.bat  colors.c  colors.h  del_git.sh  hsv.c  hsv.h  installer.iss  logo.c  mzc2mini.cpp  pack.bat  pixmap.c  resource.h  screenhack.c  screenhack.h  screenhack.rc  spline.c  src_only.bat  textclient.cpp  textclient.h  win32screensaver.c  xcolor.c  ximage.c  xlockmore.c  xlockmore.h  xlockmore.rc  xws2win.c  (+3 more)
common/: CMakeLists.txt  erase.c  grabclient.c  hsv.c  minixpm.c  mzc2mini.cpp  pixmap.c  xcolor.c  ximage.c  xws2win.c
debughelper/: CMakeLists.txt  LICENSE.txt  ReadMe.md  ReadMe.txt  Resource.h  clean.bat  debughelper.cpp  debughelper.rc  debughelper.sln  debughelper.vcproj  debughelper_res.rc  src_only.bat  stdafx.h
gl-parts/: CMakeLists.txt  cow_hide.c  cow_hoofs.c  dolphin.c  extrusion-joinoffset.c  extrusion-taper.c  glsphere.c  involute.c  shark.c  stonerview-move.c  tangram_shapes.c  teapot.c  toast2.c  toaster.c  toaster_base.c  toaster_wing.c  tube.c  whale.c
gl-parts/include/: glut_roman.h  involute.h  normals.h  stonerview-move.h  tangram_shapes.h
gl-savers/: CMakeLists.txt  blinkbox.c  cubestorm.c  extrusion.c  flurry.c  glforestfire.c  glhanoi.c  glschool.c  glschool_alg.c  glschool_gl.h  hilbert.c  jigglypuff.c  kaleidocycle.c  klein.c  moebiusgears.c  molecule.c  pinion.c  providence.c  superquadrics.c  swim.c  tunnel_draw.c
gle/: CMakeLists.txt  config.h
gle-3.1.0/: ReadMe.txt  gle.url
gle/glextrusion/: acconfig.h
gle/glextrusion/cgle-c++/: ExtrusionLib.sln
gle/glextrusion/cgle-c++/StaticLib/: ExtrusionLib.cpp  StaticLib.cpp  StaticLib.vcxproj  StaticLib.vcxproj.filters  gleBaseExtrusion.cpp  gleConeExtrusion.cpp  gleConeExtrusion.h  gleCylinderExtrusion.cpp  gleExtrusion.cpp  gleScrew.h  gleSimpleTwistedIBeam.cpp  gleSpiralExtrusion.cpp  gleSpiralExtrusion.h  gleTaperExtrusion.h  gleToroidExtrusion.cpp  gleTwistExtrusion.cpp  gleTwistedIBeam.cpp  stdafx.h
gle/glextrusion/cgle-c++/include/: ExtrusionLib.h  gleBaseExtrusion.h  gleIBeam.h  gleToroidExtrusion.h
gle/glextrusion/doc/: Makefile.am  gle-3.0.lsm
gle/glextrusion/doc/html/: Makefile.am  Makefile.in  blurb.html  build.html  index.html  join.html  texture.html  vrml.html
gle/glextrusion/examples/: .gitignore  COPYING  Makefile.am  Makefile.in  alpha.c  candlestick.c  helix3.c  helix4.c  helixtex.c  joinoffset.c  mainsimple.c  maintex.c  screw.c  taper.c  texas.c  texture.c  texture.h  twistoid.c
gle/glextrusion/man/: Makefile.am  Makefile.in  gle.man  gleExtrusion.man  gleLathe.man  glePolyCone.man  gleSetNumSides.man  gleTwistExtrusion.man
gle/glextrusion/ms-visual-c/: Makefile.am  README
gle/glextrusion/ms-visual-c/gle/: Makefile.am  Makefile.in
gle/glextrusion/src/: Makefile.in  ex_alpha.c  ex_raw.c  extrude.c  port.h  round_cap.c  segment.c  texgen.c
gle/glextrusion/swig/: gle_wrap.c  gle_wrap.html
glextrusion/: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  autogen.sh  config.h.in  configure  configure.ac  gle.spec
glextrusion/cgle-c++/StaticLib/: ExtrusionInternals.cpp  ExtrusionInternals.h  gleHelicoidExtrusion.cpp  gleHelicoidExtrusion.h  gleIBeam.cpp  gleLatheExtrusion.cpp  gleScrew.cpp  gleSimpleBeam.cpp  gleTaperExtrusion.cpp  gleTwistExtrusion.h  gleTwistedIBeam.h  stdafx.cpp  targetver.h  vssver2.scc
glextrusion/cgle-c++/include/: gleCylinderExtrusion.h  gleExtrusion.h  gleLatheExtrusion.h  gleSimpleBeam.h  gleSimpleTwistedIBeam.h
glextrusion/doc/: Makefile.in
glextrusion/doc/html/: README  tube.html
glextrusion/examples/: Makefile.examples  README  beam.c  cone.c  cylinder.c  helix.c  helix2.c  horn.c  main.h  mainjoin.c  rundemo  transport.c  twoid.c
glextrusion/man/: .gitignore  README  gleHelicoid.man  glePolyCylinder.man  gleScrew.man  gleSetJoinStyle.man  gleSpiral.man  gleSuperExtrusion.man  gleTextureMode.man  gleToroid.man
glextrusion/ms-visual-c/: Makefile.in  vc.dsw
glextrusion/ms-visual-c/gle/: gle.dsp
glextrusion/src/: .gitignore  Makefile.am  ex_angle.c  ex_cut_round.c
glextrusion/swig/: Makefile.am  Makefile.in  README  gle.i  gle.py
glparts/: CMakeLists.txt  extrusion-twistoid.c  flurry-smoke.c  flurry-star.c  rotator.c  s1_1.c  s1_3.c  s1_5.c  stonerview-osc.c  toaster_jet.c
include/: grabscreen.h  minixpm.h  mzc2mini.h  xdbe.h  xlockmore.h  xws2win.h
non-wgl/: UpgradeLog.htm  XScreenSaverWinNonWGL.sln  abstractile.c  abstractile.vcproj  abstractile.vcxproj  abstractile.vcxproj.filters  alpha.h  analogtv.c  analogtv.h  anemone.c  anemone.vcproj  anemone.vcxproj  anemone.vcxproj.filters  anemotaxis.c  anemotaxis.vcproj  anemotaxis.vcxproj  anemotaxis.vcxproj.filters  ant.c  ant.vcproj  ant.vcxproj  ant.vcxproj.filters  apollonian.c  apollonian.vcproj  apollonian.vcxproj  apollonian.vcxproj.filters  apple2-main.c  apple2.c  apple2.h  apple2.vcxproj  apple2.vcxproj.filters  asm6502.c  asm6502.h  attraction.c  attraction.vcproj  attraction.vcxproj  attraction.vcxproj.filters  barcode.c  barcode.vcproj  barcode.vcxproj  barcode.vcxproj.filters  (+506 more)
nongl-savers/: CMakeLists.txt  automata.h  boxfit.c  bsod.c  bubbles.c  ccurve.c  cloudlife.c  cwaves.c  discrete.c  distort.c  fadeplot.c  fluidballs.c  galaxy.c  helix.c  interaggregate.c  lcdscrub.c  memscroller.c  munch.c  pacman.c  (+12 more)
savers/wgl/: CMakeLists.txt  XScreenSaverWinWGL.sln  antinspect.vcproj  antmaze.c  antspotlight.c  atlantis.c  atlantis.vcproj  bubble3d.c  bubble3d.h  chessmodels.c  companion.c  companion_heart.c  cow_face.c  crackberg.vcproj  cube21.vcproj  cubestorm.vcproj  dangerball.vcproj  engine.c  extrusion-helix3.c  extrusion-screw.c  extrusion.vcproj  flipflop.vcproj  fliptext.vcproj  flurry-texture.c  flyingtoasters.c  gleidescope.c  gllist.h  glplanet.c  glplanet.vcproj  glschool.h  glschool.vcproj  glschool_alg.h  glschool_gl.c  glslideshow.c  glut_stroke.c  glutstroke.h  hypnowheel.c  jigsaw.vcproj  juggler3d.c  lament.c  (+34 more)
(+682 files in other folders)
