add_library(gl-parts STATIC
    chessmodels.c
    companion_disc.c
    companion_heart.c
    companion_quad.c
    cow_face.c
    cow_hide.c
    cow_hoofs.c
    cow_horns.c
    cow_tail.c
    cow_udder.c
    dolphin.c
    dropshadow.c
    extrusion-helix2.c
    extrusion-helix3.c
    extrusion-helix4.c
    extrusion-joinoffset.c
    extrusion-screw.c
    extrusion-taper.c
    extrusion-twistoid.c
    flurry-smoke.c
    flurry-spark.c
    flurry-star.c
    flurry-texture.c
    gllist.c
    glsphere.c
    glut_stroke.c
    glut_swidth.c
    glxfonts.c
    involute.c
    marching.c
    normals.c
    rotator.c
    s1_1.c
    s1_2.c
    s1_3.c
    s1_4.c
    s1_5.c
    s1_6.c
    s1_b.c
    shark.c
    stonerview-move.c
    stonerview-osc.c
    stonerview-view.c
    tangram_shapes.c
    teapot.c
    texfont.c
    texture.c
    toast.c
    toast2.c
    toaster.c
    toaster_base.c
    toaster_handle.c
    toaster_handle2.c
    toaster_jet.c
    toaster_knob.c
    toaster_slots.c
    toaster_wing.c
    tronbit_idle1.c
    tronbit_idle2.c
    tronbit_no.c
    tronbit_yes.c
    tube.c
    whale.c)

target_include_directories(gl-parts PRIVATE include ../gle/glextrusion/src)
