add_xlockmore_screensaver(antinspect WIN32 antinspect.c wgl.c)
add_xlockmore_screensaver(antmaze WIN32 antmaze.c wgl.c)
add_xlockmore_screensaver(antspotlight WIN32 antspotlight.c wgl.c)
add_xlockmore_screensaver(atlantis WIN32 atlantis.c swim.c wgl.c)
add_xlockmore_screensaver(atunnel WIN32 atunnel.c tunnel_draw.c wgl.c)
add_xlockmore_screensaver(blinkbox WIN32 blinkbox.c wgl.c)
add_xlockmore_screensaver(blocktube WIN32 blocktube.c wgl.c)
add_xlockmore_screensaver(boing WIN32 boing.c wgl.c)
add_xlockmore_screensaver(bouncingcow WIN32 bouncingcow.c wgl.c)
add_xlockmore_screensaver(boxed WIN32 boxed.c wgl.c)
add_xlockmore_screensaver(bubble3d WIN32 bubble3d.c b_draw.c b_lockglue.c b_sphere.c wgl.c)
add_xlockmore_screensaver(cage WIN32 cage.c wgl.c)
add_xlockmore_screensaver(carousel WIN32 carousel.c wgl.c)
add_xlockmore_screensaver(circuit WIN32 circuit.c wgl.c)
add_xlockmore_screensaver(companion WIN32 companion.c wgl.c)
add_xlockmore_screensaver(crackberg WIN32 crackberg.c wgl.c)
add_xlockmore_screensaver(cube21 WIN32 cube21.c wgl.c)
add_xlockmore_screensaver(cubenetic WIN32 cubenetic.c wgl.c)
add_xlockmore_screensaver(cubestorm WIN32 cubestorm.c wgl.c)
add_xlockmore_screensaver(cubicgrid WIN32 cubicgrid.c wgl.c)
add_xlockmore_screensaver(cubicgridclock WIN32 cubicgridclock.c wgl.c)
add_xlockmore_screensaver(dangerball WIN32 dangerball.c wgl.c)
add_xlockmore_screensaver(dnalogo WIN32 dnalogo.c wgl.c)
add_xlockmore_screensaver(endgame WIN32 endgame.c wgl.c)
add_xlockmore_screensaver(engine WIN32 engine.c wgl.c)
add_xlockmore_screensaver(extrusion WIN32 extrusion.c wgl.c)
add_xlockmore_screensaver(flipflop WIN32 flipflop.c wgl.c)
add_xlockmore_screensaver(flipscreen3d WIN32 flipscreen3d.c wgl.c)
add_xlockmore_screensaver(fliptext WIN32 fliptext.c wgl.c)
add_xlockmore_screensaver(flurry WIN32 flurry.c wgl.c)
add_xlockmore_screensaver(flyingtoasters WIN32 flyingtoasters.c wgl.c)
add_xlockmore_screensaver(gears WIN32 gears.c wgl.c)
add_xlockmore_screensaver(gflux WIN32 gflux.c wgl.c)
add_xlockmore_screensaver(glblur WIN32 glblur.c wgl.c)
add_xlockmore_screensaver(glcells WIN32 glcells.c wgl.c)
add_xlockmore_screensaver(gleidescope WIN32 gleidescope.c wgl.c)
add_xlockmore_screensaver(glforestfire WIN32 glforestfire.c wgl.c)
add_xlockmore_screensaver(glhanoi WIN32 glhanoi.c wgl.c)
add_xlockmore_screensaver(glknots WIN32 glknots.c wgl.c)
add_xlockmore_screensaver(glmatrix WIN32 glmatrix.c wgl.c)
add_xlockmore_screensaver(glplanet WIN32 glplanet.c wgl.c)
add_xlockmore_screensaver(glschool WIN32 glschool.c glschool_alg.c glschool_gl.c wgl.c)
add_xlockmore_screensaver(glslideshow WIN32 glslideshow.c wgl.c)
add_xlockmore_screensaver(glsnake WIN32 glsnake.c wgl.c)
add_xlockmore_screensaver(gltext WIN32 gltext.c wgl.c)
add_xlockmore_screensaver(hilbert WIN32 hilbert.c wgl.c)
add_xlockmore_screensaver(hypertorus WIN32 hypertorus.c wgl.c)
add_xlockmore_screensaver(hypnowheel WIN32 hypnowheel.c wgl.c)
add_xlockmore_screensaver(jigglypuff WIN32 jigglypuff.c wgl.c)
add_xlockmore_screensaver(jigsaw WIN32 jigsaw.c wgl.c)
add_xlockmore_screensaver(juggler3d WIN32 juggler3d.c wgl.c)
add_xlockmore_screensaver(kaleidocycle WIN32 kaleidocycle.c wgl.c)
add_xlockmore_screensaver(klein WIN32 klein.c wgl.c)
add_xlockmore_screensaver(lament WIN32 lament.c wgl.c)
add_xlockmore_screensaver(lavalite WIN32 lavalite.c wgl.c)
add_xlockmore_screensaver(lockward WIN32 lockward.c wgl.c)
add_xlockmore_screensaver(menger WIN32 menger.c wgl.c)
add_xlockmore_screensaver(mirrorblob WIN32 mirrorblob.c wgl.c)
add_xlockmore_screensaver(moebius WIN32 moebius.c wgl.c)
add_xlockmore_screensaver(moebiusgears WIN32 moebiusgears.c wgl.c)
add_xlockmore_screensaver(molecule WIN32 molecule.c wgl.c)
add_xlockmore_screensaver(morph3d WIN32 morph3d.c wgl.c)
add_xlockmore_screensaver(noof WIN32 noof.c wgl.c)
add_xlockmore_screensaver(photopile WIN32 photopile.c wgl.c)
add_xlockmore_screensaver(pinion WIN32 pinion.c wgl.c)
add_xlockmore_screensaver(pipes WIN32 pipes.c pipeobjs.c buildlwo.c wgl.c)
add_xlockmore_screensaver(polyhedra WIN32 polyhedra-gl.c polyhedra.c wgl.c)
add_xlockmore_screensaver(polytopes WIN32 polytopes.c wgl.c)
add_xlockmore_screensaver(providence WIN32 providence.c wgl.c)
add_xlockmore_screensaver(pulsar WIN32 pulsar.c wgl.c)
add_xlockmore_screensaver(quasicrystal WIN32 quasicrystal.c wgl.c)
add_xlockmore_screensaver(queens WIN32 queens.c wgl.c)
add_xlockmore_screensaver(rubik WIN32 rubik.c wgl.c)
add_xlockmore_screensaver(rubikblocks WIN32 rubikblocks.c wgl.c)
add_xlockmore_screensaver(sballs WIN32 sballs.c wgl.c)
add_xlockmore_screensaver(sierpinski3d WIN32 sierpinski3d.c wgl.c)
add_xlockmore_screensaver(skytentacles WIN32 skytentacles.c wgl.c)
add_xlockmore_screensaver(sonar WIN32 sonar.c sonar-sim.c wgl.c)
add_xlockmore_screensaver(spheremonics WIN32 spheremonics.c wgl.c)
add_xlockmore_screensaver(sproingies WIN32 sproingiewrap.c sproingies.c wgl.c)
add_xlockmore_screensaver(stairs WIN32 stairs.c wgl.c)
add_xlockmore_screensaver(starwars WIN32 starwars.c wgl.c)
add_xlockmore_screensaver(stonerview WIN32 stonerview.c wgl.c)
add_xlockmore_screensaver(superquadrics WIN32 superquadrics.c wgl.c)
add_xlockmore_screensaver(surfaces WIN32 surfaces.c wgl.c)
add_xlockmore_screensaver(tangram WIN32 tangram.c wgl.c)
add_xlockmore_screensaver(timetunnel WIN32 timetunnel.c wgl.c)
add_xlockmore_screensaver(topblock WIN32 topblock.c wgl.c)
add_xlockmore_screensaver(tronbit WIN32 tronbit.c wgl.c)
add_xlockmore_screensaver(unknownpleasures WIN32 unknownpleasures.c wgl.c)
add_xlockmore_screensaver(voronoi WIN32 voronoi.c wgl.c)

target_link_libraries(antinspect glparts ${OPENGL_LIBRARIES})
target_link_libraries(antmaze glparts ${OPENGL_LIBRARIES})
target_link_libraries(antspotlight glparts ${OPENGL_LIBRARIES})
target_link_libraries(atlantis glparts ${OPENGL_LIBRARIES})
target_link_libraries(atunnel glparts ${OPENGL_LIBRARIES})
target_link_libraries(blinkbox glparts ${OPENGL_LIBRARIES})
target_link_libraries(blocktube glparts ${OPENGL_LIBRARIES})
target_link_libraries(boing glparts ${OPENGL_LIBRARIES})
target_link_libraries(bouncingcow glparts ${OPENGL_LIBRARIES})
target_link_libraries(boxed glparts ${OPENGL_LIBRARIES})
target_link_libraries(bubble3d glparts ${OPENGL_LIBRARIES})
target_link_libraries(cage glparts ${OPENGL_LIBRARIES})
target_link_libraries(carousel glparts ${OPENGL_LIBRARIES})
target_link_libraries(circuit glparts ${OPENGL_LIBRARIES})
target_link_libraries(companion glparts ${OPENGL_LIBRARIES})
target_link_libraries(crackberg glparts ${OPENGL_LIBRARIES})
target_link_libraries(cube21 glparts ${OPENGL_LIBRARIES})
target_link_libraries(cubenetic glparts ${OPENGL_LIBRARIES})
target_link_libraries(cubestorm glparts ${OPENGL_LIBRARIES})
target_link_libraries(cubicgrid glparts ${OPENGL_LIBRARIES})
target_link_libraries(cubicgridclock glparts ${OPENGL_LIBRARIES})
target_link_libraries(dangerball glparts ${OPENGL_LIBRARIES})
target_link_libraries(dnalogo glparts ${OPENGL_LIBRARIES})
target_link_libraries(endgame glparts ${OPENGL_LIBRARIES})
target_link_libraries(engine glparts ${OPENGL_LIBRARIES})
target_link_libraries(extrusion glparts ${OPENGL_LIBRARIES} gle)
target_link_libraries(flipflop glparts ${OPENGL_LIBRARIES})
target_link_libraries(flipscreen3d glparts ${OPENGL_LIBRARIES})
target_link_libraries(fliptext glparts ${OPENGL_LIBRARIES})
target_link_libraries(flurry glparts ${OPENGL_LIBRARIES})
target_link_libraries(flyingtoasters glparts ${OPENGL_LIBRARIES})
target_link_libraries(gears glparts ${OPENGL_LIBRARIES})
target_link_libraries(gflux glparts ${OPENGL_LIBRARIES})
target_link_libraries(glblur glparts ${OPENGL_LIBRARIES})
target_link_libraries(glcells glparts ${OPENGL_LIBRARIES})
target_link_libraries(gleidescope glparts ${OPENGL_LIBRARIES})
target_link_libraries(glforestfire glparts ${OPENGL_LIBRARIES})
target_link_libraries(glhanoi glparts ${OPENGL_LIBRARIES})
target_link_libraries(glknots glparts ${OPENGL_LIBRARIES})
target_link_libraries(glmatrix glparts ${OPENGL_LIBRARIES})
target_link_libraries(glplanet glparts ${OPENGL_LIBRARIES})
target_link_libraries(glschool glparts ${OPENGL_LIBRARIES})
target_link_libraries(glslideshow glparts ${OPENGL_LIBRARIES})
target_link_libraries(glsnake glparts ${OPENGL_LIBRARIES})
target_link_libraries(gltext glparts ${OPENGL_LIBRARIES})
target_link_libraries(hilbert glparts ${OPENGL_LIBRARIES})
target_link_libraries(hypertorus glparts ${OPENGL_LIBRARIES})
target_link_libraries(hypnowheel glparts ${OPENGL_LIBRARIES})
target_link_libraries(jigglypuff glparts ${OPENGL_LIBRARIES})
target_link_libraries(jigsaw glparts ${OPENGL_LIBRARIES})
target_link_libraries(juggler3d glparts ${OPENGL_LIBRARIES})
target_link_libraries(kaleidocycle glparts ${OPENGL_LIBRARIES})
target_link_libraries(klein glparts ${OPENGL_LIBRARIES})
target_link_libraries(lament glparts ${OPENGL_LIBRARIES})
target_link_libraries(lavalite glparts ${OPENGL_LIBRARIES})
target_link_libraries(lockward glparts ${OPENGL_LIBRARIES})
target_link_libraries(menger glparts ${OPENGL_LIBRARIES})
target_link_libraries(mirrorblob glparts ${OPENGL_LIBRARIES})
target_link_libraries(moebius glparts ${OPENGL_LIBRARIES})
target_link_libraries(moebiusgears glparts ${OPENGL_LIBRARIES})
target_link_libraries(molecule glparts ${OPENGL_LIBRARIES})
target_link_libraries(morph3d glparts ${OPENGL_LIBRARIES})
target_link_libraries(noof glparts ${OPENGL_LIBRARIES})
target_link_libraries(photopile glparts ${OPENGL_LIBRARIES})
target_link_libraries(pinion glparts ${OPENGL_LIBRARIES})
target_link_libraries(pipes glparts ${OPENGL_LIBRARIES})
target_link_libraries(polyhedra glparts ${OPENGL_LIBRARIES})
target_link_libraries(polytopes glparts ${OPENGL_LIBRARIES})
target_link_libraries(providence glparts ${OPENGL_LIBRARIES})
target_link_libraries(pulsar glparts ${OPENGL_LIBRARIES})
target_link_libraries(quasicrystal glparts ${OPENGL_LIBRARIES})
target_link_libraries(queens glparts ${OPENGL_LIBRARIES})
target_link_libraries(rubik glparts ${OPENGL_LIBRARIES})
target_link_libraries(rubikblocks glparts ${OPENGL_LIBRARIES})
target_link_libraries(sballs glparts ${OPENGL_LIBRARIES})
target_link_libraries(sierpinski3d glparts ${OPENGL_LIBRARIES})
target_link_libraries(skytentacles glparts ${OPENGL_LIBRARIES})
target_link_libraries(sonar glparts ${OPENGL_LIBRARIES})
target_link_libraries(spheremonics glparts ${OPENGL_LIBRARIES})
target_link_libraries(sproingies glparts ${OPENGL_LIBRARIES})
target_link_libraries(stairs glparts ${OPENGL_LIBRARIES})
target_link_libraries(starwars glparts ${OPENGL_LIBRARIES})
target_link_libraries(stonerview glparts ${OPENGL_LIBRARIES})
target_link_libraries(superquadrics glparts ${OPENGL_LIBRARIES})
target_link_libraries(surfaces glparts ${OPENGL_LIBRARIES})
target_link_libraries(tangram glparts ${OPENGL_LIBRARIES})
target_link_libraries(timetunnel glparts ${OPENGL_LIBRARIES})
target_link_libraries(topblock glparts ${OPENGL_LIBRARIES})
target_link_libraries(tronbit glparts ${OPENGL_LIBRARIES})
target_link_libraries(unknownpleasures glparts ${OPENGL_LIBRARIES})
target_link_libraries(voronoi glparts ${OPENGL_LIBRARIES})

target_include_directories(extrusion PRIVATE ../gle/glextrusion/src)
